收敛了边界，暂时注释掉了速度的收敛代码